tests/functional/lang/parse-fail-utf8.err.exp
error: syntax error, unexpected invalid token
       at «stdin»:1:5:
            1| 123 é 4
             |     ^
            2|
